--- a/platform/green-carrot-backend-stack/docker-compose.yml
+++ b/platform/green-carrot-backend-stack/docker-compose.yml
@@ -1,65 +1,130 @@
 version: '2'
+networks:
+    clustnet:
+        driver: bridge
+        ipam:
+            config:
+                - subnet: 10.0.0.0/28
+                  gateway: 10.0.0.1
 services:
     config01:
         image: mongo
         command: 'mongod --port 27017 --configsvr --replSet configserver --dbpath /data/configdb'
+        ports: 
+            - '27017:27017'
+        networks:
+            clustnet:
+                ipv4_address: 10.0.0.2
         volumes:
             - './scripts:/scripts'
     config02:
         image: mongo
-        command: 'mongod --port 27017 --configsvr --replSet configserver --dbpath /data/configdb'
+        command: 'mongod --port 27018 --configsvr --replSet configserver --dbpath /data/configdb'
+        ports:
+            - '27018:27018'
+        networks:
+            clustnet:
+                ipv4_address: 10.0.0.3
         volumes:
             - './scripts:/scripts'
     sj01:
         image: mongo
-        command: 'mongod --port 27018 --shardsvr --replSet repsanjose --dbpath /data/db'
+        command: 'mongod --port 27019 --shardsvr --replSet repsanjose --dbpath /data/db'
+        ports:
+            - '27019:27019'
+        networks:
+            clustnet:
+                ipv4_address: 10.0.0.4
         volumes:
             - './scripts:/scripts'
     sj02:
         image: mongo
-        command: 'mongod --port 27018 --shardsvr --replSet repsanjose --dbpath /data/db'
+        command: 'mongod --port 27020 --shardsvr --replSet repsanjose --dbpath /data/db'
+        ports:
+            - '27020:27020'
+        networks:
+            clustnet:
+                ipv4_address: 10.0.0.5
         volumes:
             - './scripts:/scripts'
     ca01:
         image: mongo
-        command: 'mongod --port 27019 --shardsvr --replSet repcartago  --dbpath /data/db'
+        command: 'mongod --port 27021 --shardsvr --replSet repcartago  --dbpath /data/db'
+        ports:
+            - '27021:27021'
+        networks:
+            clustnet:
+                ipv4_address: 10.0.0.6
         volumes:
             - './scripts:/scripts'
     ca02:
         image: mongo
-        command: 'mongod --port 27019 --shardsvr --replSet repcartago  --dbpath /data/db'
+        command: 'mongod --port 27022 --shardsvr --replSet repcartago  --dbpath /data/db'
+        ports:
+            - '27022:27022'
+        networks:
+            clustnet:
+                ipv4_address: 10.0.0.7
         volumes:
             - './scripts:/scripts'
     al01:
         image: mongo
-        command: 'mongod --port 27020 --shardsvr --replSet repalajuela  --dbpath /data/db'
+        command: 'mongod --port 27023 --shardsvr --replSet repalajuela  --dbpath /data/db'
+        ports:
+            - '27023:27023'
+        networks:
+            clustnet:
+                ipv4_address: 10.0.0.8
         volumes:
             - './scripts:/scripts'
     al02:
         image: mongo
-        command: 'mongod --port 27020 --shardsvr --replSet repalajuela  --dbpath /data/db'
+        command: 'mongod --port 27024 --shardsvr --replSet repalajuela  --dbpath /data/db'
+        ports:
+            - '27024:27024'
+        networks:
+            clustnet:
+                ipv4_address: 10.0.0.9
         volumes:
             - './scripts:/scripts'
     arb01sj:
         image: mongo
-        command: 'mongod --port 27023 --replSet repsanjose  --dbpath /data/db'
+        command: 'mongod --port 27025 --replSet repsanjose  --dbpath /data/db'
+        ports:
+            - '27025:27025'
+        networks:
+            clustnet:
+                ipv4_address: 10.0.0.10
         volumes:
             - './scripts:/scripts'
     arb01ca:
         image: mongo
-        command: 'mongod --port 27024  --replSet repcartago  --dbpath /data/db'
+        command: 'mongod --port 27026  --replSet repcartago  --dbpath /data/db'
+        ports:
+            - '27026:27026'
+        networks:
+            clustnet:
+                ipv4_address: 10.0.0.11
         volumes:
             - './scripts:/scripts'
     arb01al:
         image: mongo
-        command: 'mongod --port 27025  --replSet repalajuela  --dbpath /data/db'
+        command: 'mongod --port 27027  --replSet repalajuela  --dbpath /data/db'
+        ports:
+            - '27027:27027'
+        networks:
+            clustnet:
+                ipv4_address: 10.0.0.12
         volumes:
             - './scripts:/scripts'
     router01:
         image: mongo
-        command: 'mongos --port 27017 --configdb configserver/config01:27017,config02:27017'
+        command: 'mongos --port 27028 --configdb configserver/config01:27017,config02:27018'
+        networks:
+            clustnet:
+                ipv4_address: 10.0.0.13
         ports:
-            - '27017:27017'
+            - '27028:27028'
         volumes:
             - './scripts:/scripts'
         depends_on:
@@ -73,9 +138,12 @@ services:
             - al02
     router02:
         image: mongo
-        command: 'mongos --port 27018 --configdb configserver/config01:27017,config02:27017'
+        command: 'mongos --port 27029 --configdb configserver/config01:27017,config02:27018'
+        networks:
+            clustnet:
+                ipv4_address: 10.0.0.14
         ports:
-            - '27018:27018'
+            - '27029:27029'
         volumes:
             - './scripts:/scripts'
         depends_on:
@@ -87,32 +155,3 @@ services:
             - ca02
             - al01
             - al02
-    inv01data:
-        image: 'cassandra:2'
-        container_name: inv01data
-        ports:
-            - 9042:9042
-            - 7199:7199
-    inv02data:
-        image: 'cassandra:2'
-        container_name: inv02data
-        ports: 
-            - 9142:9042
-        links:
-            - inv01data:seed
-        environment:
-            - CASSANDRA_SEEDS=seed
-        depends_on:
-            - inv01data
-    inv03data:
-        image: 'cassandra:2'
-        container_name: inv03data
-        ports: 
-            - 9242:9042
-        links:
-            - inv01data:seed
-        environment:
-            - CASSANDRA_SEEDS=seed
-        depends_on:
-            - inv01data
-            - inv02data
